fix: double scrollbar on large screen size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2796,6 +2796,7 @@ input, select, textarea {
 			-webkit-flex-grow: 1;
 			-ms-flex-grow: 1;
 			flex-grow: 1;
+			line-height: 1;
 		}
 
 			#header > nav ul {
